# SnowBros

./: .gitignore  README.md  SnowBros_Student_B.slnx
.github/: copilot-instructions.md
.github/workflows/: ci.yml
SnowBros_Student_B/: .gitignore  00_START_HERE_FIRST.md  ACTION_ITEMS.md  CMakeLists.txt  COMPLETE_PACKAGE.md  DESIGN_DOCUMENT.txt  ENTITY_TEMPLATE.h  FINAL_CHECKLIST.md  FileName.cpp  FlyingEnemy.h  GIT_WORKFLOW.md  LevelData.cpp  LevelData.h  MAIN_BRANCH_CHECKLIST.md  MAIN_READY_SUMMARY.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  SETUP_GUIDE.md  START_HERE.md  SnowBros_Student_B.cpp  SnowBros_Student_B.vcxproj  SnowBros_Student_B.vcxproj.filters  gamakichi_log.txt  gamakichi_source.txt  last_gamakichi.txt  main.cpp  progress.txt  users.txt
SnowBros_Student_B/src/: Game.cpp  Game.h
SnowBros_Student_B/src/Enemies/: Botom.cpp  Botom.h  Enemy.cpp  Enemy.h
SnowBros_Student_B/src/Entities/: Botom.cpp  Botom.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Player.cpp  Player.h
SnowBros_Student_B/src/Entities/Enemies/: Botom.cpp  Botom.h  Fooga.cpp  Fooga.h  Mogera.cpp  Mogera.h  Tornado.cpp  Tornado.h
SnowBros_Student_B/src/Entities/Projectiles/: Snowball.cpp  Snowball.h
SnowBros_Student_B/src/Levels/: LevelData.cpp  LevelData.h  Tiles.h
SnowBros_Student_B/src/Maps/: TileMap.cpp  TileMap.h  desktop.ini
SnowBros_Student_B/src/Systems/: DatabaseManager.cpp  DatabaseManager.h  EventBus.cpp  EventBus.h  ShopManager.cpp  ShopManager.h
